// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a subscript text to match snapshot 1`] = `
<div
  className="sc-bdfCDU krrJWc"
  fontSize={16}
  fontStyle="normal"
  fontWeight={400}
  lineHeight={16}
  onClick={[Function]}
  role="text"
  textDecoration="none"
>
  H
  <div
    className="sc-bdfCDU krrJWc"
    display="inline"
    fontSize={16}
    fontStyle="normal"
    fontWeight={400}
    lineHeight={16}
    onClick={[Function]}
    role="text"
    textDecoration="none"
  >
    <sup>
      2
    </sup>
  </div>
  O
</div>
`;

exports[`should render a superscript text to match snapshot 1`] = `
<div
  className="sc-bdfCDU krrJWc"
  fontSize={16}
  fontStyle="normal"
  fontWeight={400}
  lineHeight={16}
  onClick={[Function]}
  role="text"
  textDecoration="none"
>
  H
  <div
    className="sc-bdfCDU krrJWc"
    display="inline"
    fontSize={16}
    fontStyle="normal"
    fontWeight={400}
    lineHeight={16}
    onClick={[Function]}
    role="text"
    textDecoration="none"
  >
    <sup>
      2
    </sup>
  </div>
  O
</div>
`;

exports[`should render one truncated text line to match snapshot 1`] = `
<div
  className="sc-bdfCDU krrJWc"
  fontSize={16}
  fontStyle="normal"
  fontWeight={400}
  lineHeight={16}
  onClick={[Function]}
  role="text"
  textDecoration="underline"
>
  <div>
    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
  </div>
</div>
`;

exports[`text to match snapshot 1`] = `
<div
  className="sc-bdfCDU krrJWc"
  fontSize={96}
  fontStyle="normal"
  fontWeight={700}
  letterSpacing={-1.5}
  lineHeight={112}
  onClick={[Function]}
  role="text"
  textDecoration="line-through"
>
  Some text here
</div>
`;
